2009-11-29 [holger]	0.23cvs9

	* src/Makefile.am
	* src/notification_hotkeys.c
	* src/notification_hotkeys.h
	* src/notification_plugin.c
	* src/notification_prefs.c
	* src/notification_prefs.h
	* src/notification_trayicon.c
	* src/notification_trayicon.h
		Break global hotkeys out of trayicon as they also
		make sense to be used in connection with the indicator applet

2009-11-29 [holger]	0.23cvs8

	* src/notification_indicator.c
	* src/notification_prefs.c
	* src/notification_prefs.h
		When using the indicator applet, allow
		removing the Claws Mail from the window
		list when it is minimized

2009-11-28 [holger]	0.23cvs7

	* src/notification_prefs.c
		Support registering Claws Mail in the
		indicator applet. If registered, the applet
		will provide an entry to launch Claws Mail
		if it's not running

2009-11-25 [holger]	0.23cvs6

	* configure.ac
	* src/notification_indicator.c
	* src/notification_plugin.c
		Use new API to get .desktop file

2009-11-22 [holger]	0.23cvs5

	* src/notification_indicator.c
	* src/notification_indicator.h
		Forgot to include new files on last commit

2009-11-22 [holger]	0.23cvs4

	* configure.ac
	* src/Makefile.am
	* src/notification_core.c
	* src/notification_core.h
	* src/notification_plugin.c
	* src/notification_prefs.c
	* src/notification_prefs.h
	* src/notification_trayicon.c
		Add optional support for the indicator applet.
		New configure switch --{en|dis}able-indicator

2009-10-21 [holger]	0.23cvs3

	* src/notification_trayicon.c
		Refuse to toggle window by hotkey when trayicon
		is not visible

2009-10-17 [holger]	0.23cvs2

	* src/notification_prefs.c
		Fix build without libnotify, but with hotkey support

2009-10-16 [holger]	0.23cvs1

	* Makefile.am
	* configure.ac
	* gtkhotkey/.cvsignore
	* gtkhotkey/Makefile.am
	* gtkhotkey/gtk-hotkey-error.c
	* gtkhotkey/gtk-hotkey-error.h
	* gtkhotkey/gtk-hotkey-info.c
	* gtkhotkey/gtk-hotkey-info.h
	* gtkhotkey/gtk-hotkey-key-file-registry.c
	* gtkhotkey/gtk-hotkey-key-file-registry.h