@@ -140,3 +140,4 @@
 ( cvs diff -u -r 1.1.2.35 -r 1.1.2.36 src/notification_prefs.c;  ) > 0.23cvs7.patchset
 ( cvs diff -u -r 1.1.2.2 -r 1.1.2.3 src/notification_indicator.c;  cvs diff -u -r 1.1.2.36 -r 1.1.2.37 src/notification_prefs.c;  cvs diff -u -r 1.1.2.21 -r 1.1.2.22 src/notification_prefs.h;  ) > 0.23cvs8.patchset
 ( cvs diff -u -r 1.1.2.13 -r 1.1.2.14 src/Makefile.am;  diff -u /dev/null src/notification_hotkeys.c;  diff -u /dev/null src/notification_hotkeys.h;  cvs diff -u -r 1.1.2.36 -r 1.1.2.37 src/notification_plugin.c;  cvs diff -u -r 1.1.2.37 -r 1.1.2.38 src/notification_prefs.c;  cvs diff -u -r 1.1.2.22 -r 1.1.2.23 src/notification_prefs.h;  cvs diff -u -r 1.1.2.28 -r 1.1.2.29 src/notification_trayicon.c;  cvs diff -u -r 1.1.2.7 -r 1.1.2.8 src/notification_trayicon.h;  ) > 0.23cvs9.patchset
+( cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/notification_indicator.c;  cvs diff -u -r 1.1.2.37 -r 1.1.2.38 src/notification_plugin.c;  cvs diff -u -r 1.1.2.29 -r 1.1.2.30 src/notification_trayicon.c;  ) > 0.23cvs10.patchset
