@@ -1,3 +1,12 @@
+2009-11-29 [holger]	0.23cvs10
+
+	* src/notification_plugin.c
+	* src/notification_trayicon.c
+		Forgotten includes
+	* src/notification_indicator.c
+		Select default inbox of the account when
+		clicking on an account in the indicator applet
+
 2009-11-29 [holger]	0.23cvs9
 
 	* src/Makefile.am
